# csalab4

./: .gitignore  README.md  ast_format.py  control_unit.py  data_path.py  isa.py  machine.py  pyproject.toml  translator.py
.github/workflows/: ci.yml
components/: __init__.py  alu.py  call_stack.py  data_stack.py  io.py  memory.py
examples/: cat.lisp  double_precision.lisp  fact.lisp  hello.lisp  hello_user_name.lisp  prob1.lisp  sort.lisp
golden/: cat.ast.txt  cat.json  cat.log.txt  double_precision.ast.txt  double_precision.json  double_precision.log.txt  fact.ast.txt  fact.json  fact.log.txt  hello.ast.txt  hello.json  hello.log.txt  hello_user_name.ast.txt  hello_user_name.json  hello_user_name.log.txt  prob1.ast.txt  prob1.json  prob1.log.txt  sort.ast.txt  sort.json  sort.log.txt
microcode/: __init__.py  micro_rom.json  micro_rom.py
scripts/: regenerate_golden.py
tests/: test_first5.py  test_golden.py
tests/data/: cat_input.txt  double_precision_input.txt  sort_input.txt
